Fix close button spacing on mobile

--- a/src/components/ProductModal/ProductModal.scss
+++ b/src/components/ProductModal/ProductModal.scss
@@ -9,7 +9,7 @@
   max-height: calc(100% - 20px);
   left: 50%;
   overflow: scroll;
-  padding: 32px 16px;
+  padding: 48px 16px 32px;
   position: fixed;
   top: 50%;
   transform: translate(-50%, -50%);
